manifests/ingressVar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "${ingress_name}"
  namespace: "${namespace_name}"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "${fqdn_name}"
    secretName: "${cert_name}"
  rules:
  - host: "${fqdn_name}"
    http:
      paths:
      - path: /
        pathType: Prefix      
        backend:
          service:
            name: "${service_name}"
            port:
              number: 80
